# proxy-base-agent

./: .gitignore  CITATION.cff  README.md  __main__.py  pyproject.toml
agent/: __main__.py  agent.py  event.py  interaction.py  memory.py  message.py  state_machine.py
agent/core/: agent.py  hippocampus.py
agent/inference/: __init__.py  frontend.py  frontend_mlx.py  local.py
agent/inference/chat_templates/: __init__.py  chat_template.jinja
agent/inference/control_tokens/: __init__.py  chatml.json  deepseek.json  llama.json
agent/inference/frontend/: __init__.py  mlx.py  mlx.sh
agent/inference/inference/: __init__.py  frontend.py  frontend_mlx.py  local.py
agent/inference/prompts/: __init__.py  base.txt  web_search.txt
agent/inference/utils/: reuseable_cache.py  tokenizer_wrapper.py
agent/interface/: __init__.py  cli_interface.py
agent/interface/api_interface/: __init__.py  serving.py
agent/llm/: __init__.py  local.py  tokenizer.py
agent/llm/control_tokens/: __init__.py  (+5 more)
agent/mcp/: __init__.py  client.py  connect_to_mcp.py  host.py  server.py
agent/memory/: cortext.py  create_memory.py  discord_reader.py  dynamic_extractor.py  hippocampus.py  neo4j_property_graph.py  query_engine.py  read_discord.py  retriever.py
agent/model_inference/: __init__.py  local_inference.py  tokenizer_wrapper.py
agent/prompts/: __init__.py  base.txt  chat_template.jinja  concise.txt  llama-deepseek.jinja  web_search.txt
agent/state/: __init__.py  bash.py  python.py  reasoning.py  scratchpad.py  thinking.py  tool_call.py
agent/system/: interaction.py  memory.py  run_bash_code.py  run_python_code.py  setup_wizard.py
agent/tools/: __init__.py  add_mcp_server.py  ask_system.py  calculator.py  connect_to_mcp.py  connect_to_mcp_server.py  create_image.py  execute_code.py  generate_image.py  internal_thoughts.py  list_mcp_servers.py  list_tools.py  metacognition.py  run_code.py  send_message.py  simple_math.py  speak.py  two_variable_math.py  visualize.py  web_search.py
agent/voice/: __init__.py  voicebox.py
interface/: __init__.py  cli_interface.py
memory/: hippocampus.py
tools/: __init__.py  calculator.py  generate_image.py  list_tools.py  metacognition.py  minds_eye.py  send_message.py  status.py  web_search.py
(+72 files in other folders)
