[project]
name = "Agent"
version = "0.1"
description = "An autonomous tool using agent powered by the Proxy Structuring Engine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord>=2.3.2",
    "docstring-parser>=0.16",
    "mlx-proxy",
    "mlx>=0.22.0",
    "neo4j>=5.27.0",
    "pse",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "questionary>=2.1.0",
    "rich>=13.9.4",
    "ruff>=0.9.3",
    "imgcat>=0.6.0",
    "pillow>=11.1.0",
    "huggingface-hub>=0.28.1",
    "f5-tts-mlx>=0.2.5",
    "mflux>=0.2.1",
]

[tool.ruff.lint]
extend-select = [
  "B",    # flake8-bugbear
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # Ruff-specific
  "UP",   # pyupgrade
]
