[project]
name = "Agent"
version = "0.5"
description = "An autonomous tool using agent powered by the Proxy Structuring Engine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docstring-parser>=0.16",
    "mlx-proxy",
    "mlx",
    "pse",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "questionary>=2.1.0",
    "rich",
    "ruff",
    "imgcat>=0.6.0",
    "pillow",
    "huggingface-hub>=0.28.1",
    "mflux @ git+https://github.com/filipstrand/mflux.git",
    "sounddevice",
    "kokoro-onnx",
    "numpy",
]

[tool.ruff.lint]
extend-select = [
  "B",    # flake8-bugbear
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # Ruff-specific
  "UP",   # pyupgrade
]
