[project]
name = "Proxy-Base-Agent"
version = "1.0.0"
description = "A stateful, tool-enabled agent powered by the Proxy Structuring Engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docstring-parser>=0.16",
    "mlx-proxy",
    "mlx",
    "pse",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "questionary>=2.1.0",
    "rich",
    "ruff",
    "imgcat>=0.6.0",
    "pillow",
    "huggingface-hub>=0.28.1",
    "sounddevice",
    "kokoro-onnx",
    "numpy",
    "mcp",
    "pygithub",
    "pynput",
]

[tool.ruff.lint]
extend-select = [
  "B",    # flake8-bugbear
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # Ruff-specific
  "UP",   # pyupgrade
]
